# authforge-cpp

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md  authforge_sdk.cpp  authforge_sdk.h  generate_vectors.cpp
.github/workflows/: ci.yml  release.yml
cmake/: AuthForgeConfig.cmake.in
